@@ -31,7 +31,7 @@
 #include "desktop-handles.h"
 #include "sp-item-group.h"
 
-static GtkWidget *sp_document_tree_new (SPDocument *doc);
+static GtkWidget *sp_document_tree_new (SPDesktop *desktop);
 
 static GtkWidget *dlg = NULL;
 
@@ -60,7 +60,7 @@ sp_document_tree_dialog (void)
 		gtk_window_set_default_size ((GtkWindow *) dlg, 300, 400);
 		doc = SP_ACTIVE_DOCUMENT;
 		g_object_set_data ((GObject *) dlg, "document", doc);
-		w = sp_document_tree_new (doc);
+		w = sp_document_tree_new (SP_ACTIVE_DESKTOP);
 		g_signal_connect ((GObject *) doc, "destroy", (GCallback) sp_document_tree_dialog_doc_destroy, dlg);
 		gtk_container_add ((GtkContainer *) dlg, w);
 		g_signal_connect (G_OBJECT (dlg), "destroy", G_CALLBACK (sp_document_tree_dialog_destroy), NULL);
@@ -70,6 +70,7 @@ sp_document_tree_dialog (void)
 	gtk_window_present ((GtkWindow *) dlg);
 }
 
+#if 0
 static void
 sp_document_tree_selection_changed (GtkTreeSelection *sel, GtkTreeModel *model)
 {
@@ -82,6 +83,25 @@ sp_document_tree_selection_changed (GtkTreeSelection *sel, GtkTreeModel *model)
 		desktop = SP_ACTIVE_DESKTOP;
 		if (SP_DT_DOCUMENT (desktop) == object->document) {
 			sp_desktop_set_base (desktop, (SPGroup *) object);
+		}
+	}
+}
+#endif
+
+static void
+sp_document_tree_target_toggled (GtkCellRendererToggle *crt, const char *path, GtkTreeModel *model)
+{
+	if (gtk_cell_renderer_toggle_get_active (crt)) {
+		SPObject *object;
+		GtkTreeIter iter;
+		gtk_tree_model_get_iter_from_string (model, &iter, path);
+		object = iter.user_data;
+		if (SP_IS_GROUP (object)) {
+			SPDesktop *desktop;
+			desktop = SP_ACTIVE_DESKTOP;
+			if (SP_DT_DOCUMENT (desktop) == object->document) {
+				sp_desktop_set_base (desktop, (SPGroup *) object);
+			}
 		}
 	}
 }
@@ -126,8 +146,9 @@ sp_document_tree_printable_toggled (GtkCellRendererToggle *crt, const char *path
 }
 
 static GtkWidget *
-sp_document_tree_new (SPDocument *doc)
+sp_document_tree_new (SPDesktop *desktop)
 {
+	SPDocument *doc;
 	GtkWidget *sw, *tree;
 	SPTreeStore *store;
 	GtkTreeViewColumn *column;
@@ -136,7 +157,9 @@ sp_document_tree_new (SPDocument *doc)
 	/* GtkTreeIter iter, piter; */
 	/* GValue val = {0}; */
 
-	store = sp_tree_store_new (doc, doc->root);
+	doc = SP_VIEW_DOCUMENT (desktop);
+
+	store = sp_tree_store_new (desktop);
 
 	sw = gtk_scrolled_window_new (NULL, NULL);
 	tree = gtk_tree_view_new_with_model (GTK_TREE_MODEL (store));
@@ -149,6 +172,16 @@ sp_document_tree_new (SPDocument *doc)
 	gtk_tree_view_column_pack_start (column, rtext, TRUE);
 	gtk_tree_view_column_set_title (column, "ID");
 	gtk_tree_view_column_add_attribute (column, rtext, "text", SP_TREE_STORE_COLUMN_ID);
+	gtk_tree_view_append_column ((GtkTreeView *) tree, column);
+
+	column = gtk_tree_view_column_new ();
+	rtoggle = gtk_cell_renderer_toggle_new ();
+	gtk_cell_renderer_toggle_set_radio ((GtkCellRendererToggle *) rtoggle, TRUE);
+	g_signal_connect ((GObject *) rtoggle, "toggled", (GCallback) sp_document_tree_target_toggled, store);
+	gtk_tree_view_column_pack_start (column, rtoggle, TRUE);
+	gtk_tree_view_column_set_title (column, "Tgt");
+	gtk_tree_view_column_add_attribute (column, rtoggle, "activatable", SP_TREE_STORE_COLUMN_IS_GROUP);
+	gtk_tree_view_column_add_attribute (column, rtoggle, "active", SP_TREE_STORE_COLUMN_TARGET);
 	gtk_tree_view_append_column ((GtkTreeView *) tree, column);
 
 	column = gtk_tree_view_column_new ();
@@ -180,7 +213,10 @@ sp_document_tree_new (SPDocument *doc)
 
 	sel = gtk_tree_view_get_selection ((GtkTreeView *) tree);
 	gtk_tree_selection_set_mode (sel, GTK_SELECTION_SINGLE);
+	
+#if 0
 	g_signal_connect ((GObject *) sel, "changed", (GCallback) sp_document_tree_selection_changed, store);
+#endif
 
 	return sw;
 }
